# koho

./: .coveragerc  .travis.yml  README.rst  appveyor.yml  environment.yml  setup.py
.circleci/: config.yml
doc/: conf.py  implementation.rst  index.rst  python_api.rst  quick_start.rst  user_guide.rst
examples/: plot_classifier_comparison.py  plot_decision_forest_classifier_iris.py  plot_decision_tree_classifier_iris.py
koho/cpp/: CMakeLists.txt  Doxyfile  decision_forest.cpp  decision_forest.h
koho/cpp/tests/: test_decision_forest_classifier.cpp  test_decision_tree_classifier.cpp
koho/sklearn/: _decision_tree_cpp.cpp  _decision_tree_cython.c
koho/sklearn/notebooks/: user_guide.ipynb
koho/sklearn/tests/: test_decision_forest_classifier.py  test_decision_tree_classifier.py
